# Proyecto-Medialunas

./: .gitignore  CMakeLists.txt  INFORME_TECNICO.md  INSTRUCCIONES_HOSTING.md  InterfazGrafica.cpp  InterfazGrafica.h  README.md  main.cpp  programa
DAO/: DAO.h  UsuarioDAO.cpp  UsuarioDAO.h  categoriaUsuarioDAO.cpp  categoriaUsuarioDAO.h  clienteDAO.cpp  clienteDAO.h  detallePedidosDAO.cpp  detallePedidosDAO.h  hojaRutaDAO.cpp  hojaRutaDAO.h  insumosDAO.cpp  insumosDAO.h  loteInsumosDAO.cpp  loteInsumosDAO.h  lotesProduccionDAO.cpp  lotesProduccionDAO.h  pedidosDAO.cpp  pedidosDAO.h  recetasDAO.cpp  recetasDAO.h  stockVentaDAO.cpp  stockVentaDAO.h  variedadDAO.cpp  variedadDAO.h  vehiculosDAO.cpp  vehiculosDAO.h
DAO implementacion/: UsuarioDAOImple.cpp  UsuarioDAOImple.h  categoriaUsuarioDAOImple.cpp  categoriaUsuarioDAOImple.h  clienteDAOImple.cpp  clienteDAOImple.h  detallePedidosDAOImple.cpp  detallePedidosDAOImple.h  hojaRutaDAOImple.cpp  hojaRutaDAOImple.h  insumosDAOImple.cpp  insumosDAOImple.h  loteInsumosDAOImple.cpp  loteInsumosDAOImple.h  loteProduccionDAOimple.cpp  loteProduccionDAOimple.h  pedidosDAOimple.cpp  pedidosDAOimple.h  recetasDAOimple.cpp  recetasDAOimple.h  stockVentaDAOimple.cpp  stockVentaDAOimple.h  variedadDAOimple.cpp  variedadDAOimple.h  vehiculosDAOimple.cpp  vehiculosDAOimple.h
baseDatos/: conexion.cpp  conexion.h  db_config.example.ini  medialunas_final.sql  medialunas_mysql.sql
models/: LotesProduccion.cpp  LotesProduccion.h  categoriaUsuario.cpp  categoriaUsuario.h  cliente.cpp  cliente.h  detallePedidos.cpp  detallePedidos.h  (+18 more)
(+7 files in other folders)
